src/unep/static/downloads.css
#meeting-downloads {
  margin: 1em 0 0 0;
}

#meeting-downloads h2 {
  padding: 0;
  border-bottom: 1px solid #dedede;
  color: #286DA8;
  font-size: 1.3em;
  margin-bottom: 1px;
  margin-top:0;
  background: rgb(241, 241, 241);
}
#meeting-downloads h2 a:visited,
#meeting-downloads h2 a:hover,
#meeting-downloads h2 a {
  color: #286DA8 !important;
  display: inline-block;
  width: 100%;
}
#meeting-downloads h2 a:hover {
text-decoration: none;
}

#meeting-downloads table {
  width: 100%;
  margin: 0;
}

#meeting-downloads table p {
  margin: 0;
}

#meeting-downloads tr {
  border-bottom: 1px solid #EEEEEE;
}

#meeting-downloads th:first-child,
#meeting-downloads td:first-child {
  width: 100%;
}

#meeting-downloads th:last-child,
#meeting-downloads td:last-child {
  min-width: 190px;
  text-align: center;
}

#meeting-downloads th, #meeting-downloads td {
padding: 5px 20px 15px 20px;
}

#meeting-downloads-buttonbar {
  background: #286DA8;
  color: #FFF;
  padding: 1em;
  font-size: 0.8em;
  line-height: 4.2em;
}

#meeting-downloads-button {
  float: right;
  border: 0;
  padding: 1em;
  font-size: 1.3em;
  color: #FFF;
  text-shadow: 1px 1px 1px #333;
  box-shadow: 0px 0px 1px #EEE;
  background: #A92A55;
}
a.meeting-downloads-document-link {
text-align: right;
display: block;
}
span.meeting-select-disabled {
    opacity: .2;
}
.document-note {
color: rgb(201, 99, 111);
}
.document-title {
opacity: .8;
}

